--- a/manifest.plist
+++ b/manifest.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://pasin.github.io/pages/Client.ipa</string>
+					<string>https://pasin.github.io/pages/Clinet.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
