--- a/ExportOptions.plist
+++ b/ExportOptions.plist
@@ -11,9 +11,9 @@
 		<key>appURL</key>
 		<string>https://pasin.github.io/pages/Client.ipa</string>
 		<key>displayImageURL</key>
-		<string>https://pasin.github.io/pages/image.57x57.png</string>
+		<string>https://pasin.github.io/pages/image-57x57.png</string>
 		<key>fullSizeImageURL</key>
-		<string>https://pasin.github.io/pages/image.512x512.png</string>
+		<string>https://pasin.github.io/pages/image-512x512.png</string>
 	</dict>
 	<key>method</key>
 	<string>ad-hoc</string>
